syntax = "proto3";
package dataPackage;

message DataRequest {}

message Response {
    string line = 3;
}

service DataService {
    rpc getByLine(DataRequest) returns (stream Response);
}